Chapter 10/infra/k8s/comments-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: comments-mongo-depl
spec: 
  replicas: 1
  selector: 
    matchLabels:
      app: comments-mongo
  template: 
    metadata:
      labels:
        app: comments-mongo 
    spec:
      containers:
        - name: comments-mongo
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: comments-mongo-srv
spec:
  selector:
    app: comments-mongo
  ports: 
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
